*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.6 ===
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Updated plugin metadata (contributed by Dennis Braun).
* Fixed clang warnings.
* Updated build scripts and dependencies.

=== 1.0.2 ===
* Initial release.
