@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.6 ===
+* Added audio file preview in the open dialog.
 * Updated build scripts and dependencies.
 
 === 1.0.5 ===
